src/objects/File_Download_Audit__c.object
<CustomObject>
    <fields>
        <fullName>Case_Document_Name__c</fullName>
        <description>Stores Case Document Name</description>
        <encrypted>true</encrypted>
        <label>Case Document Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <description>Store the case number</description>
        <label>Case Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_name__c</fullName>
        <description>Stores File name</description>
        <encrypted>true</encrypted>
        <label>Title / File name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Date_of_Download__c</fullName>
        <label>Time / Date of Download</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>stores type of the file</description>
        <label>Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <description>Stores user name</description>
        <encrypted>true</encrypted>
        <label>User Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Profile__c</fullName>
        <description>Store users profile</description>
        <label>User Profile</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>File Download Audit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case_Number__c</columns>
        <columns>Case_Document_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Time_Date_of_Download__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FD-{00000}</displayFormat>
        <label>File Download Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Files Download Audit</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>